--- a/WebDesign/Workshops/JavaJamCoffeeHouse/stylesheets/index.css
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/stylesheets/index.css
@@ -1,10 +1,27 @@
-
 .container .relax h2 {
-  padding: 20px 0 0 80px;
+  padding: 25px 0 20px 16px;
+  font-size: 40px;
+}
+.container .relax ul {
+  padding-left: 16px;
 }
 
 .container .relax ul li {
-  padding: 0 0 10px 20px;
+  margin-right: 40px;
+  padding: 40px 10px 10px 30px;
+  float: left;
+  width: 170px;
+  height: 400px;
+  border: 1px solid #ccc;
+}
+
+.container .relax ul li img {
+  height: 64px;
+  width: 64px;
+}
+
+.container .relax ul li:hover {
+  background-color: #f9f9f9;
 }
 
 span.text-coffee {
