--- a/WebDesign/Workshops/JavaJamCoffeeHouse/stylesheets/master.css
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/stylesheets/master.css
@@ -2,26 +2,33 @@
 
 ul {
   list-style: none;
+  padding-left: 0;
 }
 
 .pageWrapper {
-  padding-left: 50%;
-  margin-left: -185px;
-  width: 370px;
-  height: 600px;
+  margin: 30px ;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #000;
 }
 
 /*===== header =====*/
 
 header img {
-  padding-left: 60px;
+  padding-left: 10px;
   width: 64px;
   height: 64px;
   float: left;
 }
 
 header div.headerWarp {
-  padding-left: 140px;
+  padding-left: 90px;
 }
 
 header h1 {
@@ -42,7 +49,6 @@ nav ul li.nav-last {
 }
 
 nav ul li a {
-  text-decoration: none;
   color: #000;
 }
 
@@ -54,23 +60,26 @@ nav ul li a.current {
   color: #4284f4;
 }
 
+.container {
+  height: 650px;
+}
 /*==== footer =====*/
 
 footer {
+  margin: 0;
   padding-top: 10px;
   font-size: 14px;
   height: 64px;
 }
 
-footer div {
-  float: left;
-}
 
 footer div.contact {
   padding-left: 12px;
+  float: left;
 }
 
 footer div.copyright {
   text-align: right;
-  padding: 20px 0 0 50px;
+  float: right;
+  padding: 20px 10px 0 50px;
 }
