--- a/WebDesign/InClass/13Feb/master.css
+++ b/WebDesign/InClass/13Feb/master.css
@@ -7,12 +7,13 @@
   border: 1px solid #000;
   padding: 10px;
   width: 45%;
-  float: left;
 }
 
 .part2 {
   border: 1px solid #000;
   padding: 10px;
   width: 45%;
-  float: left;
+  position: relative;
+  top: 40px;
+  left: 80px;
 }
